--- a/MainContent/templates/password/password_reset_form.html
+++ b/MainContent/templates/password/password_reset_form.html
@@ -57,7 +57,7 @@
       <button type="submit" class="btn btn-primary">Send Confirmation Link</button>
 
     </form>
-      <a href ={% url 'login' %}>Go back</a>
+      <a href ={% url 'login_page' %}>Go back</a>
     
     </div>
   </div>
