--- a/MainContent/templates/register.html
+++ b/MainContent/templates/register.html
@@ -59,7 +59,7 @@
       <button class="btn btn-primary">Sign Up</button>
     </form>
     
-    <div style="display: flex;flex-direction: right;"> <div style="margin-right: 1%;">  Already have an account then </div> <a href={% url 'login' %}>Click here</a> <div style="margin-right: 1%;"></div>to login in.</div></div>
+    <div style="display: flex;flex-direction: right;"> <div style="margin-right: 1%;">  Already have an account then </div> <a href={% url 'login_page' %}>Click here</a> <div style="margin-right: 1%;"></div>to login in.</div></div>
   
   
   </div>
